Re: #916 fix misalignment of header and text on about page

--- a/source/sass/search/_search-site.scss
+++ b/source/sass/search/_search-site.scss
@@ -504,6 +504,10 @@
     }
     padding-bottom: $space-triple;
 
+    & p{
+      padding-left: 0;
+    }
+
     & p:first-child{
       font-size: 1.5625em;
     }
